--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 buildscript {
     repositories {
         google()
@@ -6,10 +8,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
-        classpath 'io.realm:realm-gradle-plugin:3.2.1'
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'io.realm:realm-gradle-plugin:10.11.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
